--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -36,7 +36,7 @@
         <div class="col-md-6">
           <div class="card" style="border: 2px solid">
             <div class="card-body">
-              <h3 class="text-center mb-4">Login</h3>
+              <h3 class="text-center mb-4">Signup</h3>
               <form id="loginForm">
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form2Example1">Email</label>
@@ -96,10 +96,10 @@
               </form>
               <div class="text-center">
                 <p>
-                  Not a member?
-                  <a href="#!" class="text-decoration-none">Register</a>
+                  Already have an account?
+                  <a href="/login" class="text-decoration-none">Login</a>
                 </p>
-                <p>or sign up with:</p>
+                <!-- <p>or sign up with:</p> -->
                 <button type="button" class="btn btn-link btn-floating mx-1">
                   <i class="fab fa-facebook-f"></i>
                 </button>
