--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,7 +82,7 @@
                   Not a member?
                   <a href="/signup" class="text-decoration-none">Register</a>
                 </p>
-                <p>or sign up with:</p>
+                <!-- <p>or sign up with:</p> -->
                 <button type="button" class="btn btn-link btn-floating mx-1">
                   <i class="fab fa-facebook-f"></i>
                 </button>
