--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -199,3 +199,8 @@ position: relative;display: flex;height: 44px;
   /* box-shadow: 0px 0px 5px 1px #005fff26; */
   border-radius: 20px;
 }
+
+.Pcontent * {
+  font-size: 18px;
+}
+
