--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -204,3 +204,13 @@ position: relative;display: flex;height: 44px;
   font-size: 18px;
 }
 
+.tagheader {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+}
+.tagheader h1{
+  font-weight: 700;
+  font-size: 40px;
+  color: rgba(0, 0, 0, 0.788);
+}
