--- a/views/partials/prender.ejs
+++ b/views/partials/prender.ejs
@@ -13,8 +13,8 @@
         </a>
         <div class="tags">
           <p>
-            <% post.tags.forEach((tag)=> {%>
-              <a href="/tags/<%= tag.name %>"
+            <% post.tags.forEach((tag)=> { %>
+              <a href="/tag/<%= tag.name.slice(1) %>"
                 class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">
                 <%= tag.name %>
               </a>
