--- a/views/post.ejs
+++ b/views/post.ejs
@@ -17,7 +17,7 @@
               <div>
                 <p>
                   <% post.tags.forEach((tag)=> {%>
-                    <a href="/tags/<%= tag.name %>"
+                    <a href="/tag/<%= tag.name.slice(1) %>"
                       class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">
                       <%= tag.name %>
                     </a>
